--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,8 @@
+<div class="row">
 <div class="col-12 text-center pie">
         <div class="container">
         <img src="../assets/santandergris.png" alt="" class="col-12 santanderGray"><br>
         <p class="small">© 2019 - Solicitud de Crédito - Entidad Vigilada por la Superintendencia Financiera de Colombia</p>
         </div>
+</div>
 </div>
