--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<!-- <div class="principal row grid">
+
+<div class="splash text-center">
+    <img src="../assets/mercadolibred.png" alt="" class="mercadoLogo">
+    <img src="../assets/santander.png" alt="" class="santander">
+    <p class="poBy">Powered By</p>
+</div>
+<div class="principal row grid animated fadeIn">
     <div class="encMercadolibre col-12">
         <img src="../assets/mercadolibre.png" alt="">
-    </div>  -->   
+    </div>    
     <app-form-step></app-form-step>
-    <app-footer></app-footer>
-<!-- </div> -->
+    <!-- <app-footer></app-footer> -->
+</div>
