--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,10 @@ html {
   overflow-x: hidden;
 }
 
+.row {
+  position: inherit !important;
+}
+
 body {
   background-color: #F4F4F4 !important;
 }
@@ -158,7 +162,7 @@ button {
   grid-template-columns: 0.3fr 1fr 0.3fr;
   position: fixed !important;
   width: 100%;
-  z-index: 9999;
+  z-index: 1;
   top: 0;
   height: 50px;
 }
@@ -169,9 +173,18 @@ button {
   justify-self: right;
 }
 
-.row.principal {
+.row.principal.grid {
   background-color: transparent;
   margin: 0px !important;
+  grid-template-rows: 1fr 1fr;
+}
+
+.row.principal.grid app-form-step {
+  grid-row: 1;
+}
+
+.row.principal.grid app-footer {
+  grid-row: 6;
 }
 
 .mat-stepper-horizontal, .mat-stepper-vertical {
@@ -187,10 +200,102 @@ button {
   line-height: 1.6;
 }
 
+.splash {
+  opacity: 0;
+  display: grid;
+  grid-template-rows: 1fr 5fr 1fr;
+  background-color: #fff02a;
+  z-index: 0;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  -webkit-animation: slide 2s linear 1;
+  animation: slide 2s linear 1;
+}
+
+.splash .mercadoLogo {
+  align-self: center;
+  justify-self: center;
+}
+
+.splash .santander {
+  grid-row: 2;
+  align-self: end;
+  justify-self: center;
+}
+
+.splash .poBy {
+  grid-row: 3;
+  align-self: initial;
+  justify-self: center;
+}
+
+@-webkit-keyframes slide {
+  0% {
+    z-index: 3;
+    opacity: 0;
+  }
+  20% {
+    z-index: 3;
+    opacity: 0;
+  }
+  40% {
+    z-index: 3;
+    opacity: 1;
+  }
+  60% {
+    z-index: 3;
+    opacity: 1;
+  }
+  80% {
+    z-index: 3;
+    opacity: 1;
+  }
+  100% {
+    z-index: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes slide {
+  0% {
+    z-index: 3;
+    opacity: 0;
+  }
+  20% {
+    z-index: 3;
+    opacity: 0;
+  }
+  40% {
+    z-index: 3;
+    opacity: 1;
+  }
+  60% {
+    z-index: 3;
+    opacity: 1;
+  }
+  80% {
+    z-index: 3;
+    opacity: 1;
+  }
+  100% {
+    z-index: 0;
+    opacity: 0;
+  }
+}
+
+/* .spinnerCont{
+    grid-template-columns: 1fr 1fr 1fr;
+    display: grid;
+    z-index: 2;
+    mat-spinner{
+        grid-column: 2;
+    }
+} */
 /* Animaciones */
 .animated {
-  -webkit-animation-duration: 500mss;
-  animation-duration: 500ms;
+  -webkit-animation-duration: 2000mss;
+  animation-duration: 2000ms;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
 }
@@ -203,19 +308,37 @@ button {
 }
 
 @-webkit-keyframes fadeIn {
-  from {
+  0% {
     opacity: 0;
   }
-  to {
+  25% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
   }
 }
 
 @keyframes fadeIn {
-  from {
+  0% {
     opacity: 0;
   }
-  to {
+  25% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
   }
 }
