Pantalla Responsive no escalable index

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -3,7 +3,7 @@
             ¡Financia aquí el carro de tus sueños!
     </div>
     <div class="col-12 text-center titleTwo">
-            Obten aquí una respuesta inmediata
+            Obtén aquí una respuesta inmediata
     </div>
 </div>
 
