--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,10 +69,11 @@ button:focus {
 }
 
 .containerModal {
-  z-index: 1;
+  z-index: 0;
   position: absolute;
   background-color: #fff;
   margin: 2px 21px 0px 22px;
+  top: 11rem;
 }
 
 .containerModal .squareModal {
