--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -73,10 +73,11 @@ button:focus {
 }
 
 .containerModal {
-    z-index: 1;
+    z-index: 0;
     position: absolute;
     background-color: $color-white;
     margin: 2px 21px 0px 22px;
+    top: 11rem;
     .squareModal{
         z-index: 1;
         background-color: $color-white;
