--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,9 +30,9 @@ body{
 
 /* Principal Step */
 
-app-form-step{
+/* app-form-step{
     margin-top:50px;
-}
+} */
 
 .ng-invalid.ng-touched:not(form), .ng-invalid.ng-valid:not(form){
     color: $color-error;
@@ -134,12 +134,8 @@ hr{
 button{
     margin: 0px 0px 10px 0px !important;
 }
-
-.titleModal{
-    text-align: center;
-    padding: 20px 0px 0px 0px;
-    font-weight: 500;
-    font-size: 17px;
+.titlesPpal.row {
+    margin-top: 50px;
 }
 
 .hrModal{
@@ -156,6 +152,10 @@ button{
     }
     .titleModal{
         grid-column: 2;
+        text-align: center;
+        padding: 20px 0px 0px 0px;
+        font-weight: 500;
+        font-size: 17px;
     }
 }
 
@@ -178,13 +178,7 @@ button{
 .row.principal.grid{
     background-color: $color-transparent;
     margin: 0px !important;
-    grid-template-rows: 1fr 1fr;
-        app-form-step{
-            grid-row: 1;
-        }
-        app-footer{
-            grid-row: 6;
-        }   
+    display: block;  
 }
 
 .mat-stepper-horizontal, .mat-stepper-vertical {
