--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -1,16 +1,16 @@
 <div class="titlesPpal row">
     <div class="col-12 text-center titleOne">
-            ¡Financia aquí el carro de tus sueños!
+            ¡Financia el carro de tus sueños!
     </div>
     <div class="col-12 text-center titleTwo">
-            Obtén aquí una respuesta inmediata
+            Obtén una respuesta inmediata
     </div>
 </div>
 
 
 
 <mat-horizontal-stepper linear>
-        <mat-step label='' class="primerStep">            
+        <mat-step label='' [stepControl]="formTc" class="primerStep">            
 
                         <!-- Formulario -->
                         
@@ -75,7 +75,7 @@
                                 </mat-form-field>
                                 </div>
 
-                                <div class="col-12 col-sm-12 col-md col-lg">
+                                <div class="col-12 col-sm-12 col-12-md col-12-lg">
                                     <mat-form-field class="full-width">
                                             <input 
                                             matInput 
@@ -98,7 +98,7 @@
                                     </mat-form-field>
                                 </div>
 
-                                <div class="col-12 col-sm-12 col-md col-lg">
+                                <div class="col-12 col-sm-12 col-12-md col-12-lg">
                                     <mat-form-field class="full-width">
                                         <input
                                         matInput
@@ -115,11 +115,11 @@
                                     </mat-form-field>                                                                  
                                 </div>
                                     <div class="row">
-                                        <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                                            <img class="img-fluid" src="../../../assets/premiercredit.png" alt="">
+                                        <div class="col-6 col-sm-6 col-md-4 col-lg-4">
+                                            <img class="img-fluid logPremier" src="../../../assets/premiercredit.png" alt="">
                                         </div>
                                         
-                                        <div class="col-6 col-sm-6 col-md-6 col-lg-6">
+                                        <div class="col-6 col-sm-6 col-md-8 col-lg-8">
                                         <p class="tycSmall">
                                                 PREMIER CREDIT o el TERCERO AUTORIZADO quedan autorizados para obtener información sobre mis relaciones comerciales con otras entidades y consultar mis reportes ante las centrales de información.
                                         </p>    
@@ -129,6 +129,7 @@
                                     <div class="checkTycOk col-12 col-sm-12 text-center">
                                         <mat-checkbox 
                                         required
+                                        color="primary"
                                         value="" 
                                         id="defaultCheck1"
                                         name="AutorizaConsultaCentrales"
@@ -137,10 +138,11 @@
                                         #autorizaConsultaCentrales="ngModel"
                                         ></mat-checkbox>
                                         Acepto los <strong (click)="modal=true">términos y condiciones</strong>
+                                        <hr>
                                     </div>
 
-                                    <div class="col">
-                                            <button mat-button [disabled]="formTc.invalid" class="full-width" matStepperNext>Solicitar</button>
+                                    <div class="col-12 col-sm-12 col-md-12 contButton">
+                                            <button mat-button [disabled]="formTc.invalid" class="full-width siguiente" matStepperNext>Solicitar</button>
                                     </div>
                                 </div> <!-- Row -->
                             </form> 
@@ -161,8 +163,8 @@
                                       <Strong>Consulta a Mareigua Ltda. </Strong><br><br>
                                       <p>Entiendo(emos) y acepto(amos) que Premier Credit (en adelante Premier), aliado en el proceso de crédito de vehículo, informa que tiene publicadas sus políticas de recolección, uso, y administración de la información personal en la página www.premiercredit.co El o los titulares de la información personal informan a Premier que en desarrollo de los pagos efectuados de aportes al Sistema de Protección Social, en desarrollo de la autoliquidación y pagos o de la liquidación por parte de un eventual empleador, han entregado su información personal al diligenciar la Planilla Integrada de Liquidación de Aportes -PILA- información relacionada con los ingresos mensuales base de cotización, pagos a través del PILA y otros datos financieros. Con base en lo anterior, el (los) titular(es)de la información confiere(n) autorización a Premier para tratar su información personal, recolectar, transferir, almacenar, usar, circular, suprimir, compartir, actualizar, y transmitir la información personal con los siguientes fines: 1) Análisis de riesgos financieros, para ofrecimiento de productos financieros; 2) Para el procesamiento de la información y con el resultado, se entreguen reportes a los establecimientos de crédito aliados de Premier para que se analice y decida sobre el otorgamiento de productos financieros; 3) Para recolectar datos personales, consultarlos, procesarlos, divulgarlos y mantenerlos, en cualquier operador de base de datos. Se reconoce y acepta que los datos objeto de tratamiento, pueden llegar a quedar alojados fuera de Colombia, en virtud de contratos o procesamiento de tal información con responsables de tal manejo fuera de Colombia, caso en el cual Premier entregará información bajo la existencia de un contrato y a responsables ubicados en países con un nivel de protección de datos similar o superior al existente en Colombia. Se deja expresa constancia que la presente autorización puede ser revocada por el usuario y titular de la información personal, en la medida que se cumplan los requisitos legales para tal revocatoria. Lo anterior se encuentra de conformidad con la Ley 1581 de 2012. </p>
                                 </div>
-                                <div class="col-12 cnt-button">
-                                        <button mat-button class="full-width" (click)="checkTyc()">Aceptar</button>
+                                <div class="col-12 col-sm-12 col-md-12 contButton">
+                                        <button mat-button class="full-width siguiente" (click)="checkTyc()">Aceptar</button>
                                 </div>
                             </div>            
                     </div>
@@ -173,7 +175,7 @@
 
         <!-- Paso 2 -->
 
-        <mat-step label=''>
+        <mat-step label='' [stepControl]="formTct">
             <form #formTct="ngForm" (ngSubmit)="sendCentrales()">
                 <div class="row absolute dosStep">
                     <div class="col-12 col-sm-12">
@@ -230,12 +232,14 @@
                                     appCurrency
                                     required>
                                     <small *ngIf="valorFinanciar.touched && valorFinanciar.errors?.required" class="error error col-12">Inserta el valor a financiar</small>   
-                                    <small *ngIf="valorFinanciar.touched && valorFinanciar.errors?.customMin" class="error error col-12">Ingresa un valor mayor</small>
+                                    <small *ngIf="valorFinanciar.touched && valorFinanciar.errors?.customMin" class="error error col-12">Inserta el valor a financiar</small>   
+                                    <small *ngIf="valorFinanciar.errors?.customMin" class="error error col-12"></small>
                                 </mat-form-field>
                     </div>
 
-                    <div class="col-12 col-sm-12">
-                        <button class="full-width" type="submit" matStepperNext [disabled]="formTct.invalid || valorFinanciarCop < 10000000" mat-button>Solicitar</button>
+                    <div class="col-12 col-sm-12 col-md-12 contButton">
+                        <button class="col-12 full-width siguiente" type="submit" matStepperNext [disabled]="formTct.invalid || valorFinanciarCop < 10000000" mat-button>Solicitar</button>
+                        <button class="col-12 full-width anterior" type="submit" matStepperPrevious mat-button>Anterior</button>
                     </div>                    
                     
                 </div> <!-- Row -->
