--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,8 @@ $color-white: #fff;
 $color-mercadolibre: #fff02a;
 $color-fondo: #F4F4F4;
 $color-transparent:transparent;
+
+/* Responsive */
+
+$tablet: 768px;
+$desktop: 1024px;
