Quitando Campo Vendedor

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -21,7 +21,7 @@
                                     <hr>
 
                                     <!-- Identificación Vendedor -->
-                                    <mat-form-field class="full-width">
+                                    <!-- <mat-form-field class="full-width">
                                             <input 
                                             matInput
                                             type="tel"
@@ -39,7 +39,7 @@
                                                 <small class="col-12 error" *ngIf="identificacionVendedor.errors?.minlength">Mínimo {{identificacionVendedor.errors.minlength.requiredLength}} dígitos</small>
                                                 <small class="col-12 error" *ngIf="identificacionVendedor.errors?.pattern">Ingresa un número de identificación válido</small>
                                             </div>                       
-                                    </mat-form-field>
+                                    </mat-form-field> -->
 
                                         <!-- Identificación Vendedor -->
 
