--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,19 @@
 
+@mixin sSmall(){
+    @media only screen and (min-width: #{$sSmall}){
+        @content;
+    }
+}
+@mixin mSmall(){
+    @media only screen and (min-width: #{$mSmall}){
+        @content;
+    }
+}
+@mixin lSmall(){
+    @media only screen and (min-width: #{$lSmall}){
+        @content;
+    }
+}
 @mixin tablet(){
     @media only screen and (min-width: #{$tablet}){
         @content;
@@ -7,6 +22,12 @@
 
 @mixin deskopt(){
     @media only screen and (min-width: #{$desktop}){
+        @content;
+    }
+}
+
+@mixin bigScreen(){
+    @media only screen and (min-width: #{$bigScreen}){
         @content;
     }
 }
