--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,5 +8,9 @@ $color-transparent:transparent;
 
 /* Responsive */
 
+$sSmall: 320px;
+$mSmall: 375px;
+$lSmall: 425px;
 $tablet: 768px;
-$desktop: 1024px;
+$desktop: 1366px;
+$bigScreen: 1920px
